--- a/test/fixtures/preferences.yml
+++ b/test/fixtures/preferences.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  location: MyString
-  start: 2021-03-04
-  end: 2021-03-04
-  userid: MyString
+# one:
+#   location: MyString
+#   start: 2021-03-04
+#   end: 2021-03-04
+#   userid: MyString
 
-two:
-  location: MyString
-  start: 2021-03-04
-  end: 2021-03-04
-  userid: MyString
+# two:
+#   location: MyString
+#   start: 2021-03-04
+#   end: 2021-03-04
+#   userid: MyString
