--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,3 +11,15 @@
 #  email: MyString
 #  password: MyString
 #  gender: MyString
+
+xulin:
+  name: Xulin Wang
+  email: xwang143@brandeis.com
+  gender: Prefer not to answer
+  password_digest: <%= User.digest('password') %>
+
+zheng:
+  name: Chu Zheng
+  email: czzzzn1001@gmail.com
+  gender: Male
+  password_digest: <%= User.digest('password') %>
